# vulkan-mapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vulkan-test.sln
VulkanMapper/: CMakeLists.txt  VulkanMapper.h  main.cpp  readme.md
VulkanMapper/dependencies/nfd/src/: simple_exec.h
VulkanMapper/include/: app.h  clamp.h  image.h  media.h  media_manager.h  scene.h  scene_objects.h  ui.h  video.h  vk_engine.h  vk_objects.h  vk_output.h  vk_state.h  vk_types.h  vk_utils.h  vk_video.h  vm_types.h
VulkanMapper/shaders/: compile.bat  texture.frag  video_frame.frag  video_frame.spv
VulkanMapper/src/: app.cpp  clamp.cpp  image.cpp  media_manager.cpp  read_file.cpp  scene.cpp  scene_objects.cpp  ui.cpp  video.cpp  vk_engine.cpp  vk_objects.cpp  vk_output.cpp  vk_state.cpp  vk_utils.cpp  vk_video.cpp
vulkan-test/: imgui.ini  main.cpp  readme.md  vulkan-test.vcxproj  vulkan-test.vcxproj.filters
vulkan-test/docs/: ideas.md
vulkan-test/include/: media_manager.h  read_file.h  scene.h  ui.h  vk_engine.h  vk_objects.h  vk_output.h  vk_types.h  vk_utils.h  vk_video.h
vulkan-test/shaders/: compile.bat  video_frame.spv
vulkan-test/src/: media_manager.cpp  scene.cpp  ui.cpp  video.cpp  vk_engine.cpp  vk_objects.cpp  vk_output.cpp  vk_utils.cpp  vk_video.cpp
vulkan-test/src/clamp/: clamp.cpp
vulkan-test/src/read_file/: read_file.cpp
